# WRO2025_FE_INCT

./: README.md
models/: README.md
models/commercial_parts/: LiDAR.SLDPRT  LiDAR2.SLDPRT  arm-L.SLDPRT  arm-R.SLDPRT  battery.SLDPRT  motor.SLDPRT  rod-A.SLDPRT  rod-B.SLDPRT  rodend.SLDPRT  servo-horn.SLDPRT  servo.SLDPRT  spacer_board.SLDPRT  spacer_steering_assy.SLDPRT  wheel.SLDPRT
models/custom_parts/cad_files/: LiDAR_mount_back.SLDPRT  battery_holder_front.SLDPRT  battery_holder_rear.SLDPRT  breadboard_mount.SLDPRT  camera_mount_side.SLDPRT  camera_mount_upper.SLDPRT  chassis.SLDPRT  front_hub.SLDPRT  gearbox_bearing_inner.SLDPRT  gearbox_bearing_outer.SLDPRT  gearbox_frontend.SLDPRT  gearbox_mount_front.SLDPRT  gearbox_mount_rear.SLDPRT  gearbox_rearend.SLDPRT  hub_rear.SLDPRT  sleeve.SLDPRT  steering_link_mount.SLDPRT
schemes/: README.md
schemes/3D_CAD_data/: LiDAR-mid.SLDPRT  LiDAR-upper.SLDPRT  bottom-plate.SLDPRT  cam-side-short.SLDPRT  cam-upper.SLDPRT  gearbox.SLDPRT  hub.SLDPRT  sleeve.SLDPRT
src/: README.md
src/WRO2025_FE/src/imu/: package.xml  setup.py
src/WRO2025_FE/src/international_final/: package.xml  setup.cfg  setup.py
src/WRO2025_FE/src/japan_final/: setup.py
src/WRO2025_FE/src/launch/: bno055.launch.py  yaw.launch.py
src/WRO2025_FE/src/peripherals/: setup.py
src/test_wro0620/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/test_wro0620/log/: latest_build
src/test_wro0620/src/mentorpi_straight_mover/: package.xml  setup.cfg  setup.py
t-photos/: README.md
v-photos/: README.md
video/: README.md
(+73 files in other folders)
